[gd_scene load_steps=18 format=3 uid="uid://cqqccyakwjwmv"]

[ext_resource type="Script" path="res://cenas/Interactions/stone.gd" id="1_0d1c1"]
[ext_resource type="Texture2D" uid="uid://ba7k3hhiligds" path="res://assetsIncompletos/Assets-Erik/Particle FX 1.3 Free/Spritesheets/Eletric A-Sheet.png" id="1_4iifn"]
[ext_resource type="Texture2D" uid="uid://c6ksnpv3k43i1" path="res://assetsIncompletos/Assets-Erik/Pixel Art Platformer - Village Props v2.3.0/Texture/imagem_2025-06-26_195253556-removebg-preview.png" id="2_hlore"]
[ext_resource type="Texture2D" uid="uid://ctu6hu72w5bye" path="res://data/styles/portait/Portraits_v1/hud/Speech_Emotes (16 x 16).png" id="4_a2spn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_60r7n"]
atlas = ExtResource("1_4iifn")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjkfj"]
atlas = ExtResource("1_4iifn")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdn7p"]
atlas = ExtResource("1_4iifn")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c1pg"]
atlas = ExtResource("1_4iifn")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_73nsp"]
atlas = ExtResource("1_4iifn")
region = Rect2(192, 192, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_n0qk0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60r7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjkfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdn7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c1pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73nsp")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_d4q8h"]
atlas = ExtResource("1_4iifn")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnnfn"]
atlas = ExtResource("1_4iifn")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2hcn"]
atlas = ExtResource("1_4iifn")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyrfj"]
atlas = ExtResource("1_4iifn")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_80ql8"]
atlas = ExtResource("1_4iifn")
region = Rect2(192, 192, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_hi644"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4q8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnnfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2hcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyrfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80ql8")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kxfvr"]
size = Vector2(464.179, 371.642)

[node name="Eletric" type="Area2D"]
scale = Vector2(0.67, 0.67)
script = ExtResource("1_0d1c1")

[node name="eletri1" type="AnimatedSprite2D" parent="."]
z_index = 7
position = Vector2(3, -2.83331)
scale = Vector2(0.75, 0.767361)
sprite_frames = SubResource("SpriteFrames_n0qk0")
autoplay = "default"
frame_progress = 0.50256

[node name="eletri2" type="AnimatedSprite2D" parent="."]
z_index = 7
position = Vector2(116.418, -16.4179)
scale = Vector2(0.927083, 0.854167)
sprite_frames = SubResource("SpriteFrames_hi644")
autoplay = "default"
frame_progress = 0.350239

[node name="luz" type="Sprite2D" parent="."]
position = Vector2(58, 52)
rotation = -3.14159
scale = Vector2(1.56742, -1.48184)
texture = ExtResource("2_hlore")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(154.478, -6.71642)
shape = SubResource("RectangleShape2D_kxfvr")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 7
position = Vector2(70.1493, -32.8358)
scale = Vector2(2.96595, 2.75606)
texture = ExtResource("4_a2spn")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
